@@ -9,7 +9,6 @@ VERS_1.0 {
 		mosquitto_lib_cleanup;
 		mosquitto_new;
 		mosquitto_destroy;
-		mosquitto_log_init;
 		mosquitto_will_set;
 		mosquitto_will_clear;
 		mosquitto_username_pw_set;
@@ -35,6 +34,7 @@ VERS_1.0 {
 		mosquitto_message_callback_set;
 		mosquitto_subscribe_callback_set;
 		mosquitto_unsubscribe_callback_set;
+		mosquitto_log_callback_set;
 		mosquitto_message_retry_set;
 		mosquitto_want_write;
 		mosquitto_user_data_set;
