@@ -52,6 +52,8 @@ Client library:
   connection results.
 - Add mosquitto_will_clear() and change mosquitto_will_set() to only set the
   will.
+- Replaced mosquitto_log_init() with mosquitto_log_callback_set() to allow
+  clients to decide what to do with log messages.
 - Client will now disconnect itself from the broker if it doesn't receive a
   PINGRESP in the keepalive period after sending a PINGREQ.
 - Client will now send a PINGREQ if it has not received a message from the
